// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#getStateFromURL will correctly handle multiple instances of the same parameter 1`] = `
Object {
  "filters": Array [
    Object {
      "dependencies": Array [
        "underscore",
        "another",
      ],
    },
    Object {
      "keywords": Array [
        "node",
      ],
    },
  ],
  "resultsPerPage": 20,
  "searchTerm": "node",
  "sortDirection": "asc",
  "sortField": "name",
}
`;

exports[`#getStateFromURL will ignore unrecognized parameters 1`] = `
Object {
  "searchTerm": "test",
}
`;

exports[`#getStateFromURL will parse range filter types 1`] = `
Object {
  "filters": Array [
    Object {
      "date": Array [
        Object {
          "from": 12,
          "to": 4000,
        },
        Object {
          "to": 4000,
        },
      ],
    },
    Object {
      "cost": Array [
        Object {
          "from": 50,
        },
      ],
    },
    Object {
      "keywords": Array [
        "node",
      ],
    },
  ],
}
`;

exports[`#getStateFromURL will parse the current state from the URL 1`] = `
Object {
  "filters": Array [
    Object {
      "dependencies": Array [
        "underscore",
      ],
    },
    Object {
      "keywords": Array [
        "node",
      ],
    },
  ],
  "resultsPerPage": 20,
  "searchTerm": "node",
  "sortDirection": "asc",
  "sortField": "name",
}
`;
